--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link  rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
+    <link  rel="shortcut icon" type="image/x-icon" href="Images/logo/logo.png" />
     <title>Pizza House</title>
     <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/responsive.css">
 </head>
 <body class="wrapper">
-    
+    <header>
+        <div class="topHeader">
+            <div class="contact"></div>
+            <div class="logo"></div>
+            <div class="social"></div>
+        </div>
+        <div class="mainHeader"></div>
+    </header>
+    <section></section>
+    <footer></footer>   
 </body>
 </html>
